# rofi-plugins

./: Cargo.toml  flake.nix  justfile  readme.md
nix/: plugin.nix  websearch-plugin.nix
rofi-clipboard/: Cargo.toml
rofi-clipboard/src/: lib.rs
rofi-websearch/: Cargo.toml
rofi-websearch/src/: lib.rs  search.rs
search_engines/: Cargo.toml  bangs.json  build.rs
search_engines/src/: lib.rs  search_entry.rs
test/: config.rasi
