[package]
name = "rofi-websearch"
version = "0.1.0"
edition = "2024"

[dependencies]

rofi-mode = { workspace = true }
rofi-plugin-sys = { workspace = true }
serde = { version = "1", features = ["derive"] }
urlencoding = "2.1.3"
serde_json = "1"
dirs = "6"
curl = "0.4.49"
libc = "0.2.182"

[lib]
crate-type = ["cdylib"]
