[package]
name = "search_engines"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf        = "0.11"

[build-dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf_codegen = "0.11"
